# zephyr

./: CODEOWNERS  west.yml
arch/riscv/: Kconfig
arch/riscv/core/: irq_manage.c
boards/arm/nrf5340_dk_nrf5340/: Kconfig  Kconfig.board  Kconfig.defconfig
drivers/audio/: dmic_nrfx_pdm.c
drivers/clock_control/: Kconfig.nrf  nrf_clock_calibration.c  nrf_power_clock.c
drivers/flash/: flash_mspi_nor.c  spi_nor.h
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.nrfe  Kconfig.nrfx  gpio_nrfe.c
drivers/ipm/: Kconfig  Kconfig.nrfx  Kconfig.template.nrf_ipc_channel  ipm_nrfx_ipc.c  ipm_nrfx_ipc.h
drivers/pinctrl/: pinctrl_nrf.c
drivers/pwm/: pwm_nrfx.c
drivers/spi/: Kconfig.nrfx  spi_nrfx_spim.c
drivers/watchdog/: Kconfig.nrfx
include/logging/: log_backend_raw_uart.h  log_frontend.h
modules/: Kconfig.nordic
modules/hal_nordic/: CMakeLists.txt  Kconfig
samples/subsys/ipc/basic/: CMakeLists.txt  Kconfig.sysbuild  README.rst  prj.conf  sample.yaml  sysbuild.cmake
samples/subsys/ipc/basic/boards/: nrf54l15pdk_nrf54l15_cpuapp.overlay
samples/subsys/ipc/basic/common/: common.h
samples/subsys/ipc/basic/remote/: CMakeLists.txt  prj.conf
samples/subsys/ipc/basic/remote/boards/: nrf54l15pdk_nrf54l15_cpuflpr.overlay
samples/subsys/ipc/basic/remote/src/: main.c
samples/subsys/ipc/basic/src/: main.c
snippets/nordic-flpr/: README.rst
snippets/nordic-flpr-xip/: README.rst
soc/nordic/: CMakeLists.txt  sysbuild.cmake  validate_rram_partitions.c
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_raw_uart.c  log_core.c  log_frontend.c
(+95 files in other folders)
